changed size for player,computer icon

--- a/diceGame.html
+++ b/diceGame.html
@@ -12,14 +12,14 @@
     <header id="assignmentName">Display Header</header>
     <main>
         <section id="playerSection">
-            <img src="img/knight.gif" alt="knight" width="150px" height="150px"> 
-            <p id="playerName">Jack</p>
+            <img src="img/knight.gif" alt="knight" width="200px" height="200px"> 
+            <p id="playerName">Player</p>
             <section id="pDiceSection"></section>
             <p id="playerCurrentScore"></p>
             <p id="playerTotalScore"></p>
         </section>
         <section id="computerSection">
-            <img src="img/goblin.gif" alt="goblin" width="150px" height="150px"> 
+            <img src="img/goblin.gif" alt="goblin" width="200px" height="200px"> 
             <p id="enemyName">Computer</p>
             <section id="cDiceSection"></section>
             <p id="computerCurrentScore"></p>
@@ -29,6 +29,7 @@
             <button id="start">Start</button>
             <button id="restart">Restart</button>
         </section>
+        <p id="resultMessage"></p>
     </main>
     <footer id="copyRightMessage">Display Footer</footer>
 </body>
