rename footer id

--- a/diceGame.html
+++ b/diceGame.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header id="assignmentName">Display Header</header>
+    <header id="assignmentName">Dice Game</header>
     <main>
         <section id="playerSection">
             <img src="img/knight.gif" alt="knight" width="200px" height="200px"> 
@@ -31,6 +31,6 @@
         </section>
         <p id="resultMessage"></p>
     </main>
-    <footer id="copyRightMessage">Display Footer</footer>
+    <footer id="copyRightSignature">&copy 2022 Jack Luo - COMP 2132</footer>
 </body>
 </html>
