--- a/diceGame.html
+++ b/diceGame.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="scripts/jquery-3.6.1.min.js" defer="defer"></script>
     <script src="scripts/diceGame.js" defer="defer"></script>
     <link rel="stylesheet" href="css/diceGame.css">
     <title>Document</title>
 </head>
+
 <body>
     <header id="assignmentName">Dice Game</header>
     <main>
         <section id="playerSection">
-            <img src="img/knight.gif" alt="knight" width="200px" height="200px"> 
+            <img src="img/knight.gif" alt="knight" width="200px" height="200px">
             <p id="playerName">Player</p>
             <section id="pDiceSection"></section>
             <p id="playerCurrentScore"></p>
             <p id="playerTotalScore"></p>
         </section>
         <section id="computerSection">
-            <img src="img/goblin.gif" alt="goblin" width="200px" height="200px"> 
+            <img src="img/goblin.gif" alt="goblin" width="200px" height="200px">
             <p id="enemyName">Computer</p>
             <section id="cDiceSection"></section>
             <p id="computerCurrentScore"></p>
@@ -30,7 +33,33 @@
             <button id="restart">Restart</button>
         </section>
         <p id="resultMessage"></p>
+        <div class="accordion">
+            <div class="accordion-container accordion-container-01">
+                <h2 class="tab tab-01">Instruction:</h2>
+                <div class="content content-01">
+                    <ul>
+                        <li>To start, click the 'Start' button.</li>
+                        <li>To advance to the next round, click the 'Start' button again.</li>
+                        <li>After three rounds, the game is over and the final score will be display with final score
+                            area.</li>
+                        <li>If you want to play again, click on 'Restart' button or refresh the page.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="accordion-container accordion-container-01">
+                <h2 class="tab tab-02">Rules:</h2>
+                <div class="content content-02">
+                    <ul>
+                        <li>Each round, player and computer will both roll a pair of dice.</li>
+                        <li>If any players two dice comes up as a 1, the score for this round for the player will be zero.</li>
+                        <li>If any players rolls a pair of the same numbers then the player will receive double of the value.</li>
+                        <li>Any other combination will get a score for the sum of the two dices they roll.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
     <footer id="copyRightSignature">&copy 2022 Jack Luo - COMP 2132</footer>
 </body>
+
 </html>
