changed img components in html

--- a/diceGame.html
+++ b/diceGame.html
@@ -17,14 +17,16 @@
         <section id="playerSection">
             <img src="img/knight.gif" alt="knight" width="200px" height="200px">
             <p id="playerName">Player</p>
-            <section id="pDiceSection"></section>
+            <img id="playerDice" alt="" width="100px" height="100px">
+            <img id="playerDice2" alt="" width="100px" height="100px">
             <p id="playerCurrentScore"></p>
             <p id="playerTotalScore"></p>
         </section>
         <section id="computerSection">
             <img src="img/goblin.gif" alt="goblin" width="200px" height="200px">
             <p id="enemyName">Computer</p>
-            <section id="cDiceSection"></section>
+            <img id="computerDice" alt="" width="100px" height="100px">
+            <img id="computerDice2" alt="" width="100px" height="100px">
             <p id="computerCurrentScore"></p>
             <p id="computerTotalScore"></p>
         </section>
@@ -51,8 +53,10 @@
                 <div class="content content-02">
                     <ul>
                         <li>Each round, player and computer will both roll a pair of dice.</li>
-                        <li>If any players two dice comes up as a 1, the score for this round for the player will be zero.</li>
-                        <li>If any players rolls a pair of the same numbers then the player will receive double of the value.</li>
+                        <li>If any players two dice comes up as a 1, the score for this round for the player will be
+                            zero.</li>
+                        <li>If any players rolls a pair of the same numbers then the player will receive double of the
+                            value.</li>
                         <li>Any other combination will get a score for the sum of the two dices they roll.</li>
                     </ul>
                 </div>
