--- a/diceGame.html
+++ b/diceGame.html
@@ -13,9 +13,10 @@
 
 <body>
     <header id="assignmentName">Dice Game</header>
+    <p id="resultMessage"></p>
     <main>
         <section id="playerSection">
-            <img src="img/knight.gif" alt="knight" width="200px" height="200px">
+            <img src="img/knight.gif" alt="knight" width="215px" height="215px">
             <p id="playerName">Player</p>
             <img id="playerDice" alt="" width="100px" height="100px">
             <img id="playerDice2" alt="" width="100px" height="100px">
@@ -23,7 +24,7 @@
             <p id="playerTotalScore"></p>
         </section>
         <section id="computerSection">
-            <img src="img/goblin.gif" alt="goblin" width="200px" height="200px">
+            <img src="img/goblin.gif" alt="goblin" width="215px" height="215px">
             <p id="enemyName">Computer</p>
             <img id="computerDice" alt="" width="100px" height="100px">
             <img id="computerDice2" alt="" width="100px" height="100px">
@@ -31,37 +32,40 @@
             <p id="computerTotalScore"></p>
         </section>
         <section id="buttonSection">
-            <button id="start">Start</button>
-            <button id="restart">Restart</button>
+            <button id="start" type="button">Start</button>
+            <button id="restart" type="button">Restart</button>
         </section>
-        <p id="resultMessage"></p>
-        <div class="accordion">
-            <div class="accordion-container accordion-container-01">
-                <h2 class="tab tab-01">Instruction:</h2>
-                <div class="content content-01">
-                    <ul>
-                        <li>To start, click the 'Start' button.</li>
-                        <li>To advance to the next round, click the 'Start' button again.</li>
-                        <li>After three rounds, the game is over and the final score will be display with final score
-                            area.</li>
-                        <li>If you want to play again, click on 'Restart' button or refresh the page.</li>
-                    </ul>
+        <section>
+            <div class="accordion">
+                <div class="accordion-container accordion-container-01">
+                    <h2 class="tab tab-01">Instruction:</h2>
+                    <div class="content content-01">
+                        <ul>
+                            <li>To start, click the 'Start' button.</li>
+                            <li>To advance to the next round, click the 'Start' button again.</li>
+                            <li>After three rounds, the game is over and the final score will be display with final
+                                score
+                                area.</li>
+                            <li>If you want to play again, click on 'Restart' button or refresh the page.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="accordion-container accordion-container-01">
+                    <h2 class="tab tab-02">Rules:</h2>
+                    <div class="content content-02">
+                        <ul>
+                            <li>Each round, player and computer will both roll a pair of dice.</li>
+                            <li>If any players two dice comes up as a 1, the score for this round for the player will be
+                                zero.</li>
+                            <li>If any players rolls a pair of the same numbers then the player will receive double of
+                                the
+                                value.</li>
+                            <li>Any other combination will get a score for the sum of the two dices they roll.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="accordion-container accordion-container-01">
-                <h2 class="tab tab-02">Rules:</h2>
-                <div class="content content-02">
-                    <ul>
-                        <li>Each round, player and computer will both roll a pair of dice.</li>
-                        <li>If any players two dice comes up as a 1, the score for this round for the player will be
-                            zero.</li>
-                        <li>If any players rolls a pair of the same numbers then the player will receive double of the
-                            value.</li>
-                        <li>Any other combination will get a score for the sum of the two dices they roll.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        </section>
     </main>
     <footer id="copyRightSignature">&copy 2022 Jack Luo - COMP 2132</footer>
 </body>
