--- a/diceGame.html
+++ b/diceGame.html
@@ -35,7 +35,7 @@
             <button id="start" type="button">Start</button>
             <button id="restart" type="button">Restart</button>
         </section>
-        <section>
+        <section id="accordionSection">
             <div class="accordion">
                 <div class="accordion-container accordion-container-01">
                     <h2 class="tab tab-01">Instruction:</h2>
